# jupyter_ssh_kernels

./: README.rst  jupyter_ssh_kernels.py  pyproject.toml  remote_launch.py
jupyter_ssh_kernels/: __init__.py  __main__.py  jupyter_ssh_kernels.py  launcher.py  manager.py  provider.py  remote_launch.py
